@@ -1,22 +1,0 @@
-HOSTS:
-  server:
-    roles:
-      - default
-      - master
-      - server
-    platform:   el-6-x86_64
-    box:        puppetlabs/centos-6.6-64-nocm
-    box_url:    https://vagrantcloud.com/puppetlabs/boxes/centos-6.6-64-nocm
-    hypervisor: vagrant
-  client:
-    roles:
-      - agent
-      - client
-    platform:   el-6-x86_64
-    box:        puppetlabs/centos-6.6-64-nocm
-    box_url:    https://vagrantcloud.com/puppetlabs/boxes/centos-6.6-64-nocm
-    hypervisor: vagrant
-CONFIG:
-  log_level: verbose
-  type:      foss
-  vagrant_memsize: 256
